# llm-guard

./: .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.yml  .pre-commit-config.yaml  .ruff.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: general-questions.md
.github/workflows/: codeql.yml  docs.yml  lint.yml  test.yml
api/client/: index.html
api/deployment/: index.html
api/overview/: index.html
api/reference/: index.html  swagger-8ccb97a2.html  swagger-8e525426.html
assets/: extra.css
attacks/invisible_prompt/: index.html
benchmarks/: input_examples.json  output_examples.json  run.py  scan_output_latency.py  scan_prompt_latency.py
changelog/: index.html
customization/add_scanner/: index.html
docs/: CNAME  CONTRIBUTING.md  best_practices.md  changelog.md  examples.md  index.md  installation.md  quickstart.md  roadmap.md  usage.md
docs/api/: client.md  deployment.md  overview.md  reference.md
docs/attacks/: invisible_prompt.ipynb
docs/benchmarks/: input_scanners.md  output_scanners.md
docs/customization/: add_scanner.md
docs/get_started/: attacks.md  best_practices.md  installation.md  optimization.md  playground.md
docs/input_scanners/: anonymize.md  ban_code.md  ban_competitors.md  ban_substrings.md  ban_topics.md  code.md  emotion_detection.md  gibberish.md  invisible_text.md  jailbreak.md  language.md  prompt_injection.md  regex.md  secrets.md  sentiment.md  token_limit.md  toxicity.md
docs/notebooks/: langchain_rag.ipynb
docs/output_scanners/: ban_code.md  ban_competitors.md  ban_substrings.md  ban_topics.md  bias.md  code.md  deanonymize.md  emotion_detection.md  factual_consistency.md  gibberish.md  json.md  language.md  language_same.md  malicious_urls.md  no_refusal.md  reading_time.md  refutation.md  regex.md  relevance.md  sensitive.md  sentiment.md  toxicity.md  url_reachability.md
docs/overrides/: main.html
docs/tutorials/: litellm.md  openai.md  optimization.md
docs/usage/: api.md  best_practices.md  langchain.md  openai.md  playground.md  rag.md
examples/: amazon_bedrock.py  emotion_detection_example.py  google  google_gemini.py  langchain.ipynb  langchain.py  langchain_chain.py  langchain_lcel.py  langchain_llm.py  openai.py  openai_api.py  openai_streaming.py
examples/api/: Dockerfile  Makefile  README.md  app.py  cache.py  config.py  config.yml  openapi.json  requirements.txt  scanners.yml
examples/demo/: Dockerfile  README.md  app.py  output.py  output_text.txt  prompt.py  requirements.txt
examples/playground/: Dockerfile  README.md  app.py  output.py  prompt.py  prompt_text.txt  requirements.txt
get_started/attacks/: index.html
get_started/best_practices/: index.html
get_started/installation/: index.html
get_started/optimization/: index.html
get_started/playground/: index.html
get_started/quickstart/: index.html
input_scanners/anonymize/: index.html
input_scanners/ban_code/: index.html
input_scanners/ban_competitors/: index.html
input_scanners/ban_substrings/: index.html
input_scanners/ban_topics/: index.html
input_scanners/code/: index.html
input_scanners/emotion_detection/: index.html
input_scanners/gibberish/: index.html
input_scanners/invisible_text/: index.html
input_scanners/language/: index.html
input_scanners/prompt_injection/: index.html
input_scanners/regex/: index.html
input_scanners/secrets/: index.html
input_scanners/sentiment/: index.html
input_scanners/token_limit/: index.html
input_scanners/toxicity/: index.html
llm_guard/: __init__.py  evaluate.py  exception.py  model.py  transformers_helpers.py  util.py  vault.py
llm_guard/input_scanners/: __init__.py  anonymize.py  ban_code.py  ban_competitors.py  ban_substrings.py  ban_topics.py  base.py  code.py  emotion_detection.py  gibberish.py  invisible_text.py  jailbreak.py  language.py  prompt_injection.py  prompt_injection_v2.py  regex.py  secrets.py  sentiment.py  token_limit.py  toxicity.py  util.py
llm_guard/output_scanners/: __init__.py  ban_code.py  ban_competitors.py  ban_substrings.py  ban_topics.py  base.py  bias.py  code.py  deanonymize.py  emotion_detection.py  factual_consistency.py  gibberish.py  json.py  language.py  language_same.py  malicious_urls.py  no_refusal.py  reading_time.py  refutation.py  regex.py  relevance.py  sensitive.py  sentiment.py  toxicity.py  url_reachabitlity.py  util.py
llm_guard/resources/: jailbreak.json  jailbreak.json.txt  output_stop_substrings.json  prompt_stop_substrings.json  refusal.json  sensisitive_patterns.json
llm_guard_api/: Dockerfile  Dockerfile-cuda  Makefile  README.md  docker-compose.yml  entrypoint.sh  openapi.json  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt
llm_guard_api/app/: __main__.py  app.py  cache.py  config.py  otel.py  scanner.py  schemas.py  util.py
llm_guard_api/config/: scanners.yml
llm_guard_api/src/: __main__.py  app.py  config.py  scanners.yml  schemas.py  util.py
llm_guard_api/src/config/: scanners.yml
output_scanners/ban_code/: index.html
output_scanners/ban_competitors/: index.html
output_scanners/ban_substrings/: index.html
output_scanners/ban_topics/: index.html
output_scanners/bias/: index.html
output_scanners/code/: index.html
output_scanners/deanonymize/: index.html
output_scanners/emotion_detection/: index.html
output_scanners/factual_consistency/: index.html
output_scanners/gibberish/: index.html
output_scanners/json/: index.html
output_scanners/language/: index.html
output_scanners/language_same/: index.html
output_scanners/malicious_urls/: index.html
output_scanners/no_refusal/: index.html
output_scanners/reading_time/: index.html
output_scanners/regex/: index.html
output_scanners/relevance/: index.html
search/: search_index.json
tests/: test_evaluate.py  test_util.py
(+184 files in other folders)
