[project]
name = "llm-guard"
description = "LLM-Guard is a comprehensive tool designed to fortify the security of Large Language Models (LLMs). By offering sanitization, detection of harmful language, prevention of data leakage, and resistance against prompt injection attacks, LLM-Guard ensures that your interactions with LLMs remain safe and secure."
authors = [
  { name = "Protect AI", email = "community@protectai.com"}
]
keywords = ["llm", "language model", "security", "adversarial attacks", "prompt injection", "prompt leakage", "PII detection", "self-hardening", "firewall"]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10,<3.13"

dependencies = [
  "bc-detect-secrets==1.5.36",
  "faker>=36,<37",
  "fuzzysearch>=0.7,<0.9",
  "json-repair>=0.39,<0.40",
  "nltk>=3.9.1,<4",
  "presidio-analyzer==2.2.354",
  "presidio-anonymizer==2.2.354",
  "regex==2024.11.6",
  "tiktoken>=0.9,<1.0",
  "torch>=2.4.0",
  "transformers==4.48.3",
  "structlog>=24",
  "oldest-supported-numpy",
  "spacy-pkuseg==1.0.0"
]

[project.optional-dependencies]
onnxruntime = [
  "optimum[onnxruntime]==1.24.0",
]
onnxruntime-gpu = [
  "optimum[onnxruntime-gpu]==1.24.0",
]
docs-dev = [
  "mkdocs>=1.6,<2",
  "mkdocs-autorefs==1.3.1",
  "mkdocs-git-revision-date-localized-plugin>=1.3.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.6.5",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-swagger-ui-tag>=0.6.11",
]
dev = [
  "llm_guard[docs-dev]",
  "autoflake>=2,<3",
  "pytest>=8.0.0,<9",
  "pytest-cov>=5.0.0,<6",
  "pre-commit>=3.8,<5",
  "pyright~=1.1.394",
  "ruff==0.9.6",
]

[project.urls]
homepage = "https://github.com/protectai/llm-guard"
documentation = "https://llm-guard.com/"
repository = "https://github.com/protectai/llm-guard"
issues = "https://github.com/protectai/llm-guard/issues"
changelog = "https://llm-guard.com/changelog/"

[tool.setuptools]
packages = {find = {where=["."], include=["llm_guard", "llm_guard.*"]}}
license-files = [
  "LICENSE"
]

[tool.setuptools.dynamic]
version = {attr = "llm_guard.version.__version__"}

[tool.setuptools.package-data]
llm_guard = [
  "**/*.json"
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
log-level = "DEBUG"

# The flag below should only be activated in special debug sessions
# i.e. the test hangs and we need to see what happened up to that point.
# There are some race conditions with how the logging streams are closed in the teardown
# phase, which will cause tests to fail or "magically" ignored.
log_cli = "False"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
