[project]
name = "llm-guard"
description = "LLM-Guard is a comprehensive tool designed to fortify the security of Large Language Models (LLMs). By offering sanitization, detection of harmful language, prevention of data leakage, and resistance against prompt injection attacks, LLM-Guard ensures that your interactions with LLMs remain safe and secure."
authors = [
  { name = "Protect AI", email = "community@protectai.com"}
]
keywords = ["llm", "language model", "security", "adversarial attacks", "prompt injection", "prompt leakage", "PII detection", "self-hardening", "firewall"]
license = { file="LICENSE" }
readme = "README.md"
version = "0.3.16"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<3.13"

dependencies = [
  "bc-detect-secrets==1.5.43",
  "faker>=37,<38",
  "fuzzysearch>=0.7,<0.9",
  "json-repair==0.44.1",
  "nltk>=3.9.1,<4",
  "presidio-analyzer==2.2.358",
  "presidio-anonymizer==2.2.358",
  "regex==2024.11.6",
  "tiktoken>=0.9,<1.0",
  "torch>=2.4.0",
  "transformers==4.51.3",
  "structlog>=24"
]

[project.optional-dependencies]
onnxruntime = [
  "optimum[onnxruntime]==1.25.2",
]
onnxruntime-gpu = [
  "optimum[onnxruntime-gpu]==1.25.2",
]
docs-dev = [
  "mkdocs>=1.6,<2",
  "mkdocs-autorefs==1.4.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.6.14",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-swagger-ui-tag>=0.7.1",
]
dev = [
  "llm_guard[docs-dev]",
  "autoflake>=2,<3",
  "pytest>=8.3.5,<9",
  "pytest-cov>=6.1.1,<7",
  "pre-commit>=4.2.0,<5",
  "pyright~=1.1.400",
  "ruff==0.11.10",
]

[project.urls]
homepage = "https://github.com/protectai/llm-guard"
documentation = "https://protectai.github.io/llm-guard/"
repository = "https://github.com/protectai/llm-guard"
issues = "https://github.com/protectai/llm-guard/issues"
changelog = "https://protectai.github.io/llm-guard/changelog/"

[tool.setuptools]
packages = {find = {where=["."], include=["llm_guard", "llm_guard.*"]}}
license-files = []

[tool.pytest.ini_options]
addopts = "-p no:warnings"
log-level = "DEBUG"

# The flag below should only be activated in special debug sessions
# i.e. the test hangs and we need to see what happened up to that point.
# There are some race conditions with how the logging streams are closed in the teardown
# phase, which will cause tests to fail or "magically" ignored.
log_cli = "False"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
